--- a/HW2_zhangx88.Rmd
+++ b/HW2_zhangx88.Rmd
@@ -1,4 +1,3 @@
-
 Xieting Zhang, HW2, Biostat 578 Bioinformatics
 ========================================================
 
@@ -72,7 +71,7 @@ topp <- topTable(ebay_m, coef="treatmentPoly IC H", adjust='fdr', p.value = 0.05
 
 We need to pick out the genes that have an adjusted p-value less than 0.1:
 ```{r }
-selected <- p.adjust(ebay_m$F.p.value) < 0.1
+selected <- p.adjust(ebay_m$p.value[,3]) < 0.1
 gds.selected <- mygds_new[[1]][selected,]
 ```
 
